Port TW translation scripts to API 3.0
Picking up from 07f0b695f32c81bd8dfd86c2e23fe1b5c898024a
Translations scripts have been migrated to use Transifex API 3.0.
TurboWarp's own translations are now stored in scratch-gui again, so
this repository is just a trimmed down scratch-l10n and some scripts.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "scratch-l10n",
-    "version": "3.15.0",
-    "description": "Localization for the Scratch 3.0 components",
+    "name": "@turbowarp/scratch-l10n",
+    "version": "3.1000.0",
+    "description": "Minified scratch-l10n for TurboWarp",
     "main": "./dist/l10n.js",
     "browser": "./src/index.js",
     "bin": {
@@ -9,6 +9,9 @@
         "tx-push-src": "./scripts/tx-push-src.js"
     },
     "scripts": {
+        "tw:pull": "babel-node scripts/tw-pull",
+        "tw:push": "babel-node scripts/tw-push",
+        "tw:publish": "./scripts/tw-publish.sh",
         "build:data": "babel-node scripts/build-data",
         "build": "npm run clean && npm run build:data && webpack --progress --colors --bail",
         "clean": "rimraf ./dist ./locales && mkdirp dist locales",
@@ -37,14 +40,14 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/LLK/scratch-l10n.git"
+        "url": "git+https://github.com/TurboWarp/scratch-l10n.git"
     },
-    "author": "Massachusetts Institute of Technology",
+    "author": "Thomas Weber",
     "license": "BSD-3-Clause",
     "bugs": {
-        "url": "https://github.com/LLK/scratch-l10n/issues"
+        "url": "https://github.com/TurboWarp/scratch-l10n/issues"
     },
-    "homepage": "https://github.com/LLK/scratch-l10n#readme",
+    "homepage": "https://github.com/TurboWarp/scratch-l10n#readme",
     "dependencies": {
         "@babel/cli": "^7.1.2",
         "@babel/core": "^7.1.2",
