--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "p-queue": "3.0.0",
         "rimraf": "^2.6.2",
         "webpack": "^4.6.0",
-        "webpack-cli": "^3.1.2"
+        "webpack-cli": "^3.1.2",
+        "yaml": "^2.2.1"
     }
 }
